change model and add some docs
